objects/MW_Project__c.object
<CustomObject>
    <description>This is the AEG Request and Project Object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used as a place holder so that the project can be created from Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_of_Interest__c</fullName>
        <description>Describe the AE/PE Application</description>
        <label>Describe the Application / Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_Area__c</fullName>
        <inlineHelpText>This field is used by AE/PE Managers to assign Technical Service Requests to PAN-EMEA and PAN-APAC queues.</inlineHelpText>
        <label>Assignment Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PAN AMER</fullName>
                </value>
                <value>
                    <fullName>PAN APAC</fullName>
                </value>
                <value>
                    <fullName>PAN EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Rationale__c</fullName>
        <description>The filed is to explicitly show the rationale for the PE work separate from the overall description of the Project work.</description>
        <label>Business Rationale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Captures the kind of TE relationship with an account</description>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Light</fullName>
                </value>
                <value>
                    <fullName>Opportunistic</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>will be checked if there are any competitors related with project or opportunity</description>
        <label>Competitive Situation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulting_Potential__c</fullName>
        <label>Consulting Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Account__c</fullName>
        <formula>Customer_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Account__c</fullName>
        <description>Count Account records associated with Project</description>
        <label>Count Account</label>
        <summaryForeignKey>Account_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Opportunity__c</fullName>
        <label>Count Opportunity</label>
        <summaryForeignKey>Opportunity_Projects__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Selected_Priorities__c</fullName>
        <description>Count the number of the Selected Priorities from multi select picklist</description>
        <formula>IF(INCLUDES( Selling_Priorities__c , &quot;Automated Driving&quot;),1,0) +
                  IF(INCLUDES( Selling_Priorities__c , &quot;Computer Vision&quot;),1,0) +
                  IF(INCLUDES( Selling_Priorities__c , &quot;HDL&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;Robotics&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;Motor and Power Control&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;Internet of Things&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;MATLAB Platform&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;Physical Systems Modeling&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;Polyspace&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;Simulink Real-Time&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;Wireless&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;Simulink and Model-Based Design&quot;),1,0) +
IF(INCLUDES( Selling_Priorities__c , &quot;EDU&quot;),1,0) +
IF(INCLUDES(  Selling_Priorities__c , &quot;Engineering Data Analytics&quot;),1,0)</formula>
        <label>Count of Selected Priorities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Time_Card__c</fullName>
        <description>Number of the time card associated with the project. Used in validation rule</description>
        <label>Count Time Card</label>
        <summaryForeignKey>Project_Time_Card__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Create_content_for_this_event__c</fullName>
        <label>Create content for this event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_To_First_Assigned_Days__c</fullName>
        <description>Calculate days between project created date and first assigned date, exclude weekends. If Assigned Date is null, calculate time between Created and Now excluding weekends</description>
        <formula>If(IsNull(First_Assigned_Date__c),
If(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)&lt;=MOD( DateValue(Now())  - DATE(1985,6,24),7),
Now() - CreatedDate - (FLOOR((DateValue(Now()) - DateValue(CreatedDate))/7)*2),
Now() - CreatedDate - (FLOOR((DateValue(Now()) - DateValue(CreatedDate))/7)*2+2)
)
,
If(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)&lt;=MOD( DateValue(First_Assigned_Date__c)  - DATE(1985,6,24),7),
First_Assigned_Date__c - CreatedDate - (FLOOR((DateValue(First_Assigned_Date__c) - DateValue(CreatedDate))/7)*2),
First_Assigned_Date__c - CreatedDate - (FLOOR((DateValue(First_Assigned_Date__c) - DateValue(CreatedDate))/7)*2+2)
)
-
CASE(MOD( DateValue(First_Assigned_Date__c)  - DATE(1985,6,24),7)
  ,5, First_Assigned_Date__c - DateTimeValue(DateValue(First_Assigned_Date__c))
  ,6, First_Assigned_Date__c - (DateTimeValue(DateValue(First_Assigned_Date__c))-1)
  ,0)
)
-
CASE(MOD( DateValue(CreatedDate)  - DATE(1985,6,24),7)
,5, DateTimeValue(DateValue(CreatedDate))+2-CreatedDate-2
,6, DateTimeValue(DateValue(CreatedDate))+1-CreatedDate-2
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created To First Assigned - Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_To_First_Assigned_Hours__c</fullName>
        <description>Hours Between Created and First Assigned Date. Calculation based on Days Between Created and First Assigned field</description>
        <formula>Created_To_First_Assigned_Days__c *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created To First Assigned - Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Customer Contact for AEG Request</description>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>AEG_Projects_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Project_Became_Active__c</fullName>
        <description>when Project status  changes from Open to PE: Active, the field should be updated with the current Date/Time.</description>
        <label>Date Project Became Active</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Project_Closed__c</fullName>
        <description>Story 1073498 
Send a notification to project requester to let him know that the project status switched to Closed/Canceled.</description>
        <label>Date Project Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_they_have_budget__c</fullName>
        <description>Do they have budget flag</description>
        <label>Do they have budget?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                    <default>true</default>
                    <label>I don&apos;t know</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_for_Review__c</fullName>
        <formula>IF( OR( AND( ISBLANK( Last_Project_Review_Date__c  ) , Total_Project_Time__c &gt;25) , AND( NOT( ISBLANK( Last_Project_Review_Date__c ) ) ,  Labor_Hours_after_Last_Reviewed__c  &gt; 50) ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Date_Time__c</fullName>
        <description>Expected delivery time of AEG Request</description>
        <label>Proposed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Assigned_Date__c</fullName>
        <inlineHelpText>Date/Time the Project was first assigned to a team member</inlineHelpText>
        <label>First Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Open__c</fullName>
        <description>Formula field to check if the project is open with either open or PE: Active status</description>
        <formula>OR(ISPICKVAL(Project_Status__c,&apos;Open&apos;), ISPICKVAL( Project_Status__c , &apos;PE: Active&apos;) )</formula>
        <label>Is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_decision_maker_involved__c</fullName>
        <description>Is decision maker involved field</description>
        <label>Is decision maker involved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_joint_partner_involved__c</fullName>
        <label>Is joint partner involved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_CFE_Already_Involved__c</fullName>
        <description>Is CFE already involved on opportunity: (Required only when CFE has been specified)</description>
        <label>Is CFE already involved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labor_Hours_after_Last_Reviewed__c</fullName>
        <label>Labor Hours after Last Reviewed</label>
        <summarizedField>Project_Time_Card__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Time_Card__c.Is_Hours_Since_Last_Reviewed_Date__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Time_Card__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Assigned_Date__c</fullName>
        <inlineHelpText>Latest Date/Time the Project was assigned to a team member</inlineHelpText>
        <label>Last Assigned Date</label>
        <summarizedField>Project_Team_Member__c.CreatedDate</summarizedField>
        <summaryForeignKey>Project_Team_Member__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Project_Review_Date__c</fullName>
        <defaultValue>null</defaultValue>
        <description>used to capture the last project review date for pilot projects.</description>
        <inlineHelpText>Used to capture the last project review date for projects (typically Pilot projects)</inlineHelpText>
        <label>Last Project Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Target__c</fullName>
        <label>Lead Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_of_Request__c</fullName>
        <description>to capture from which location request was made.</description>
        <label>Location of Request (City, State)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Date_Account_Relationship_Created__c</fullName>
        <label>Min Date Account Relationship Created</label>
        <summarizedField>Account_Project__c.CreatedDate</summarizedField>
        <summaryForeignKey>Account_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>My_Project__c</fullName>
        <formula>CONTAINS(Project_Team_Members__c, RIGHT($User.Id,5)+ &quot;,&quot;)</formula>
        <label>My Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Requests__c</fullName>
        <description>This field will be true when the current User is the Project Requester.</description>
        <formula>IF( Requester__c = $User.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BNL</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>Natick</fullName>
                </value>
                <value>
                    <fullName>Nordic</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Stage_at_Time_of_Request__c</fullName>
        <description>captures the Opp Stage when the Project was created from an Opportunity</description>
        <label>Opp Stage at Time of Request</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used as a place holder so that the project can be created from Opty. Will use this field to set the project Id on the opportunity from which it is created.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AEG_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Purpose__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Conf Call/Email</fullName>
                </value>
                <value>
                    <fullName>Visit Customer</fullName>
                </value>
                <value>
                    <fullName>WebEx</fullName>
                </value>
                <value>
                    <fullName>Guided Evaluation</fullName>
                </value>
                <value>
                    <fullName>Deep Technical Engagement</fullName>
                </value>
                <value>
                    <fullName>Product Customization</fullName>
                </value>
                <value>
                    <fullName>Private Seminar</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>Public Seminar</fullName>
                </value>
                <value>
                    <fullName>Customer Visits MW</fullName>
                </value>
                <value>
                    <fullName>Release &amp; Software Update</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Conference/Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web Event</fullName>
                </value>
                <value>
                    <fullName>Partner/Distributor Support</fullName>
                </value>
                <value>
                    <fullName>Other Physical Events</fullName>
                </value>
                <value>
                    <fullName>Departmental Support</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Number__c</fullName>
        <description>Number of the account marked as primary in the Account Project Related object</description>
        <label>Primary Number</label>
        <summaryFilterItems>
            <field>Account_Project__c.is_Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Project__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>CDA</fullName>
                </value>
                <value>
                    <fullName>SPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Latest_Time_Card_Created_By__c</fullName>
        <description>Latest Time Card Created By</description>
        <label>Project Latest Time Card Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Latest_Time_Card__c</fullName>
        <description>Latest Time Card Created Date</description>
        <label>Project Latest Time Card</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Level__c</fullName>
        <description>is required field for project record type</description>
        <label>Project Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AE Project</fullName>
                </value>
                <value>
                    <fullName>PE: Coaching</fullName>
                </value>
                <value>
                    <fullName>PE: Full Pilot</fullName>
                </value>
                <value>
                    <fullName>PE: Professional Courtesy</fullName>
                </value>
                <value>
                    <fullName>DE: Strategic</fullName>
                </value>
                <value>
                    <fullName>DE: Initial Purchase  </fullName>
                </value>
                <value>
                    <fullName>DE: Utilization</fullName>
                </value>
                <value>
                    <fullName>DE: Expansion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Link__c</fullName>
        <description>used to create a console friendly URL for a project record, used in the assignment emails.  This is not on the page layout.</description>
        <formula>$Setup.General_Settings__c.Current_Domain__c  &amp; &quot;console#%2f&quot; &amp;  Id</formula>
        <label>Project Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>The Project Status</description>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>PE: Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Strategic_Importance__c</fullName>
        <description>will be required for project record type</description>
        <label>Project Strategic Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Success</fullName>
                </value>
                <value>
                    <fullName>Deployment Expansion</fullName>
                </value>
                <value>
                    <fullName>Industry Success</fullName>
                </value>
                <value>
                    <fullName>Revenue Generation</fullName>
                </value>
                <value>
                    <fullName>Competitive Win</fullName>
                </value>
                <value>
                    <fullName>Marketing Benefit</fullName>
                </value>
                <value>
                    <fullName>Management Focus</fullName>
                </value>
                <value>
                    <fullName>Improve Biz Relationship</fullName>
                </value>
                <value>
                    <fullName>Development Requirements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Team_Members__c</fullName>
        <description>Field to hold a concatenated list of Project Team Member user IDs (populated via trigger on Project Team Member object) to be used for dynamically determining &quot;My Projects&quot;.</description>
        <label>Project Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_CFE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Proposed Customer Facing Engineer (CFE)</description>
        <inlineHelpText>Proposed Customer Facing Engineer (CFE)</inlineHelpText>
        <label>Proposed CFE</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AEG_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Support</fullName>
                </value>
                <value>
                    <fullName>Territory Support</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other Dept Support</fullName>
                </value>
                <value>
                    <fullName>TE University Engagement</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will have to be populated with the Requester Name.</description>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Priorities__c</fullName>
        <label>Selling Priorities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Driving</fullName>
                </value>
                <value>
                    <fullName>Computer Vision</fullName>
                </value>
                <value>
                    <fullName>HDL</fullName>
                </value>
                <value>
                    <fullName>Engineering Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Robotics</fullName>
                </value>
                <value>
                    <fullName>Motor and Power Control</fullName>
                </value>
                <value>
                    <fullName>Internet of Things</fullName>
                </value>
                <value>
                    <fullName>MATLAB Platform</fullName>
                </value>
                <value>
                    <fullName>Physical Systems Modeling</fullName>
                </value>
                <value>
                    <fullName>Polyspace</fullName>
                </value>
                <value>
                    <fullName>Simulink Real-Time</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Simulink and Model-Based Design</fullName>
                </value>
                <value>
                    <fullName>EDU</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <description>Technical Evangelist Agreement Id in Siebel</description>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Resource_Group__c</fullName>
        <label>Technical Resource Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Engineering</fullName>
                    <default>true</default>
                    <label>Application Engineering</label>
                </value>
                <value>
                    <fullName>Pilot Engineering</fullName>
                </value>
                <value>
                    <fullName>Technical Evangelist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thread_Id__c</fullName>
        <formula>&quot;ref:&quot;&amp;LEFT( $Organization.Id , 4 )&amp; 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0000000&apos;), 
RIGHT($Organization.Id,4), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;000000&apos;), 
RIGHT($Organization.Id,5), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;00000&apos;), 
RIGHT($Organization.Id,6), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0000&apos;), 
RIGHT($Organization.Id,7), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;000&apos;), 
RIGHT($Organization.Id,8), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;00&apos;), 
RIGHT($Organization.Id,9), 
IF(BEGINS(RIGHT($Organization.Id,11), &apos;0&apos;), 
RIGHT($Organization.Id,10), 
RIGHT($Organization.Id,11) 
) 
) 
) 
) 
) 
) 
) 
&amp;&quot;.&quot;&amp;LEFT( Id , 4 )&amp; 
IF(BEGINS(RIGHT(Id,11), &apos;0000000&apos;), RIGHT(Id,4), 
IF(BEGINS(RIGHT(Id,11), &apos;000000&apos;), RIGHT(Id,5), 
IF(BEGINS(RIGHT(Id,11), &apos;00000&apos;), RIGHT(Id,6), 
IF(BEGINS(RIGHT(Id,11), &apos;0000&apos;), RIGHT(Id,7), 
IF(BEGINS(RIGHT(Id,11), &apos;000&apos;), RIGHT(Id,8), 
IF(BEGINS(RIGHT(Id,11), &apos;00&apos;), RIGHT(Id,9), 
IF(BEGINS(RIGHT(Id,11), &apos;0&apos;), RIGHT(Id,10), 
RIGHT(Id,11) 
) 
) 
) 
) 
) 
) 
) 
&amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_by_Selling_Priority__c</fullName>
        <description>Total Project Time ( summary of Time Cards time) divided by the number of the selected Selling Priorities</description>
        <formula>IF (Count_Selected_Priorities__c &gt;0,Total_Project_Time__c  /  Count_Selected_Priorities__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time per Selling Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Project_Time__c</fullName>
        <label>Total Project Time</label>
        <summarizedField>Project_Time_Card__c.Hours__c</summarizedField>
        <summaryForeignKey>Project_Time_Card__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>